# modelica-rs

./: .env-sample  .gitignore  Cargo.toml  README.md
attribution/: dependencies.toml  self.toml
src/: lib.rs
src/modelica_parser/: mod.rs  modelica.interp  modelicalexer.rs  modelicalistener.rs  modelicaparser.rs
tests/: integration_tests.rs
