[package]
name = "modelica-rs"
version = "0.1.0"
edition = "2021"
description = "A Rust wrapper for the Modelica standard library. This is not ready. Ignore it for now."
authors = ["Brennan Harris <brennan@brennanharris.xyz>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.190" }