[package]
name = "modelica-rs"
version = "0.1.4"
edition = "2021"
description = "A Rust wrapper for the Modelica standard library. Trying out implementation of rrevenantt's antlr_rust."
authors = ["Brennan Harris <brennan@brennanharris.xyz>"]
license = "MIT"
repository = "https://github.com/brennanxyz/modelica-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
antlr-rust = { version =  "0.3.0-beta" }
serde = { version = "1.0.190", features = ["derive"]}
regex = { version = "1.10.2" }

[dev-dependencies]
async-recursion = { version = "1.0.5" }
dotenv = { version = "0.15.0" }
reqwest = { version = "0.11.22", features = ["json"]}
tokio = { version = "1.33.0", features = ["full"] }
git2 = { version = "0.18.1"}
tempdir = { version = "0.3.7" }